# airup

./: .gitignore  README.md
airup_su/: Cargo.toml
airup_su/src/: main.rs
airupctl/: Cargo.toml
airupctl/src/: main.rs
airupd/: Cargo.toml
airupd/debug/: airup.conf
airupd/debug/milestones/default/: a.svc  milestone.toml
airupd/debug/prestart/: 01-work.sh  02-hello.sh  03-paral.sh
airupd/debug/svc/: b.svc
airupd/src/: main.rs  power.rs
airupd/test/: airup.conf
airupd/test/airup.d/default/: a.svc  b.svc  target.conf
airupd/test/airup.d/svc/: c.svc  d.svc  x.svc
airupoe/: Cargo.toml
airupoe/src/: main.rs
core/airup_su/: Cargo.toml
core/airup_su/src/: main.rs
core/airupctl/: Cargo.toml
core/airupd/: Cargo.toml
core/airupd/src/: main.rs
core/airupd/test/: airup.conf
example/: airup.conf
