[package]
name = "airupd"
version = "0.1.0"
authors = ["sisungo <otelve@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
airupdbg = []

[dependencies]
ansi_term = "0.12.1"
nix = "0.18.0"
libc = "0.2.79"
ini = "1.3.0"
regex = "1.4.1"
once_cell = "1.4.1"
nng = "1.0.0-rc.1"
