[package]
name = "airupd"
license = "The Unlicense"
version = "0.0.1"
authors = ["sisungo <otelve@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
airupdbg = []

[dependencies]
tokio = { version = "0.3.2", features = ["full"] }
toml = "0.5.7"
log4rs = "0.13.0"
once_cell = "1.4.1"
nng = "1.0.0-rc.2"
ansi_term = "0.12.1"
libc = "0.2.80"
